--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "start": "node server.js"
+     "start": "node index.js",
+     "build":"npm install; npm run build"
   },
   "keywords": [],
   "author": "",
