--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "fakedata",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Index.js",
   "scripts": {
-     "start": "node index.js",
+     "start": "node Index.js",
      "build":"npm install; npm run build"
   },
   "keywords": [],
